--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--756318969\testng-customsuite.xml</span>
+                    <span>C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--2078165003\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">9 methods,   9 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,47 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RCTest" class="method navigator-link" hash-for-method="addRC(MdsRC, spare)">addRC(MdsRC, spare)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.K_RoutesTest" class="method navigator-link" hash-for-method="adminlogin">adminlogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RCTest" class="method navigator-link" hash-for-method="addRC(EvertecCred, spare)">addRC(EvertecCred, spare)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RCTest" class="method navigator-link" hash-for-method="addRC(ATMRC, spare)">addRC(ATMRC, spare)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RCTest" class="method navigator-link" hash-for-method="addRC(NaiguataRC, spare)">addRC(NaiguataRC, spare)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RCTest" class="method navigator-link" hash-for-method="adminlogin">adminlogin</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RCTest" class="method navigator-link" hash-for-method="editRC(NaiguataRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)">editRC(NaiguataRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RCTest" class="method navigator-link" hash-for-method="editRC(MdsRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)">editRC(MdsRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RCTest" class="method navigator-link" hash-for-method="editRC(ATMRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)">editRC(ATMRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.RCTest" class="method navigator-link" hash-for-method="editRC(EvertecCred, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)">editRC(EvertecCred, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.K_RoutesTest" class="method navigator-link" hash-for-method="editRoutes(CG_value2, route_tr, route_td, route_tdbtn)">editRoutes(CG_value2, route_tr, route_td, route_tdbtn)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -161,41 +126,9 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.RCTest</span>
+              <span class="class-name">tests.K_RoutesTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="addRC(MdsRC, spare)">
-                  </a> <!-- addRC(MdsRC, spare) -->
-                  <span class="method-name">addRC</span>
-                  <span class="parameters">(MdsRC,spare)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="addRC(EvertecCred, spare)">
-                  </a> <!-- addRC(EvertecCred, spare) -->
-                  <span class="method-name">addRC</span>
-                  <span class="parameters">(EvertecCred,spare)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="addRC(ATMRC, spare)">
-                  </a> <!-- addRC(ATMRC, spare) -->
-                  <span class="method-name">addRC</span>
-                  <span class="parameters">(ATMRC,spare)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="addRC(NaiguataRC, spare)">
-                  </a> <!-- addRC(NaiguataRC, spare) -->
-                  <span class="method-name">addRC</span>
-                  <span class="parameters">(NaiguataRC,spare)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="adminlogin">
@@ -205,34 +138,10 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="editRC(NaiguataRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)">
-                  </a> <!-- editRC(NaiguataRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow) -->
-                  <span class="method-name">editRC</span>
-                  <span class="parameters">(NaiguataRC,rout_cat_tr,rout_cat_td,RC_edit_btn-colmn_on_pickedRow)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="editRC(MdsRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)">
-                  </a> <!-- editRC(MdsRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow) -->
-                  <span class="method-name">editRC</span>
-                  <span class="parameters">(MdsRC,rout_cat_tr,rout_cat_td,RC_edit_btn-colmn_on_pickedRow)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="editRC(ATMRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)">
-                  </a> <!-- editRC(ATMRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow) -->
-                  <span class="method-name">editRC</span>
-                  <span class="parameters">(ATMRC,rout_cat_tr,rout_cat_td,RC_edit_btn-colmn_on_pickedRow)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="editRC(EvertecCred, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)">
-                  </a> <!-- editRC(EvertecCred, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow) -->
-                  <span class="method-name">editRC</span>
-                  <span class="parameters">(EvertecCred,rout_cat_tr,rout_cat_td,RC_edit_btn-colmn_on_pickedRow)</span>
+                  <a name="editRoutes(CG_value2, route_tr, route_td, route_tdbtn)">
+                  </a> <!-- editRoutes(CG_value2, route_tr, route_td, route_tdbtn) -->
+                  <span class="method-name">editRoutes</span>
+                  <span class="parameters">(CG_value2,route_tr,route_td,route_tdbtn)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -240,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--756318969\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--2078165003\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -249,7 +158,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.RCTest&quot;/&gt;
+      &lt;class name=&quot;tests.K_RoutesTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -277,7 +186,7 @@
               <span class="test-group-name">reggrsn1</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">editRC</span>
+                <span class="method-in-group-name">editRoutes</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -297,48 +206,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(9);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'editRC')
-data.setCell(0, 2, 'tests.RCTest')
-data.setCell(0, 3, 11073);
+data.setCell(0, 1, 'editRoutes')
+data.setCell(0, 2, 'tests.K_RoutesTest')
+data.setCell(0, 3, 29164);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'editRC')
-data.setCell(1, 2, 'tests.RCTest')
-data.setCell(1, 3, 10847);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'editRC')
-data.setCell(2, 2, 'tests.RCTest')
-data.setCell(2, 3, 10773);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'editRC')
-data.setCell(3, 2, 'tests.RCTest')
-data.setCell(3, 3, 10468);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'addRC')
-data.setCell(4, 2, 'tests.RCTest')
-data.setCell(4, 3, 4085);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'addRC')
-data.setCell(5, 2, 'tests.RCTest')
-data.setCell(5, 3, 3340);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'addRC')
-data.setCell(6, 2, 'tests.RCTest')
-data.setCell(6, 3, 3271);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'adminlogin')
-data.setCell(7, 2, 'tests.RCTest')
-data.setCell(7, 3, 3245);
-data.setCell(8, 0, 8)
-data.setCell(8, 1, 'addRC')
-data.setCell(8, 2, 'tests.RCTest')
-data.setCell(8, 3, 3059);
+data.setCell(1, 1, 'adminlogin')
+data.setCell(1, 2, 'tests.K_RoutesTest')
+data.setCell(1, 3, 354);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 29 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -364,50 +245,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.RCTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.K_RoutesTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">adminlogin</span>
-                <span class="method-start">5805 ms</span>
+                <span class="method-start">5257 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">editRC(ATMRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)</span>
-                <span class="method-start">13856 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">editRC(EvertecCred, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)</span>
-                <span class="method-start">24644 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">editRC(MdsRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)</span>
-                <span class="method-start">35722 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">editRC(NaiguataRC, rout_cat_tr, rout_cat_td, RC_edit_btn-colmn_on_pickedRow)</span>
-                <span class="method-start">46575 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">addRC(ATMRC, spare)</span>
-                <span class="method-start">57066 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">addRC(EvertecCred, spare)</span>
-                <span class="method-start">61153 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">addRC(MdsRC, spare)</span>
-                <span class="method-start">64505 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">addRC(NaiguataRC, spare)</span>
-                <span class="method-start">67566 ms</span>
+                <span class="method-name">editRoutes(CG_value2, route_tr, route_td, route_tdbtn)</span>
+                <span class="method-start">7500 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">70840 ms</span>
+                <span class="method-start">36678 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
